# mcu-fun

./: .envrc  .gitignore  README.md  arduino-cli.yaml  build.sh  upload.sh
Demo/: .clangd  Bouncy.cpp  Bouncy.h  Demo.ino  Net.cpp  Net.h  Screen.cpp  Screen.h
Test/: Test.ino  sketch.yaml
libraries/RainbowSequence/: README.md  library.properties
libraries/RainbowSequence/src/: RainbowSequence.cpp  RainbowSequence.h
libraries/SerialPrintf/: library.properties
libraries/SerialPrintf/src/: SerialPrintf.cpp  SerialPrintf.h
scripts/png2carray/: .gitignore  README.md  bitmaps.h  dist-readme.md  images.h  pyproject.toml  requirements.txt
scripts/png2carray/png2carray/: __init__.py  png2c.py
